Fixed overflow

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -741,6 +741,7 @@ html[data-js] #th__hero-image, html[data-js] #th__hero-content {
     padding: 108px 0 108px;
     position: relative;
     text-align: center;
+    overflow-x: hidden;
 }
 #th__services h2 {
     color: rgba(0,0,0, .05);
